<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="60dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/full_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_iqama_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_iqama_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/iqama_number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/nationality" />
        </android.support.design.widget.TextInputLayout>

        <!-- Date Picker -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_issue_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_issue_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusableInTouchMode="true"
                android:hint="@string/issue_date"
                android:focusable="false" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_expire_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_expire_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:focusable="false"
                android:inputType="date"
                android:hint="@string/expire_date" />
        </android.support.design.widget.TextInputLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/remain_days_till_iqama_expire"/>

        <Button android:id="@+id/btn_add_worker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_worker"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            />

    </LinearLayout>




